# code-examples

cli/: README.md  task.md
cli/crates/args/: Cargo.toml  README.md
cli/crates/cli/: Cargo.toml
cli/crates/cli/src/: lib.rs
cli/crates/cli/src/command/: cli.rs
cli/crates/cli/src/project/: mod.rs  project_name.rs  project_template.rs
cli/crates/command/: Cargo.toml
cli/crates/command/src/create/: command.rs  mod.rs  service.rs
cli/crates/command/src/create/vue/: command.rs  mod.rs
cli/crates/command/src/init/: mod.rs
cli/crates/command/src/list/: mod.rs
cli/crates/commands/: Cargo.toml  README.md
cli/crates/commands/src/: lib.rs
cli/crates/commands/src/create/: mod.rs
cli/crates/commands/src/init/: handler.rs  mod.rs  prompts.rs
cli/crates/common/: README.md
cli/crates/common/src/: project.rs  template.rs
cli/crates/utils/: README.md
cli/crates/utils/src/: lib.rs  monorepo.rs  print.rs
rust/: RUST_NAPI_SCAFFOLD.md
rust/rust-cli/: .gitattributes  Cargo.toml  package.json
rust/scaffold/: Cargo.toml  README.md  package.json
rust/scaffold/crates/commands/: Cargo.toml
rust/scaffold/crates/commands/src/: config.rs  entry.rs  lib.rs
rust/scaffold/crates/commands/src/create/: handler.rs
rust/scaffold/crates/commands/src/new/: handler.rs  mod.rs
rust/scaffold/crates/commands/src/update/: README.md  handler.rs  mod.rs
rust/scaffold/crates/utils/: Cargo.toml
rust/scaffold/crates/utils/src/: copy.rs  git.rs  lib.rs  logger.rs
rust/scaffold/scripts/: build.sh  common.sh  debug.sh  install.sh  test.sh
