[package]
name = "commands"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
colored = { workspace = true }
dialoguer ={ workspace = true }
fs_extra = { workspace = true }
indicatif = "0.18.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

utils = { path = "../utils"}
